--- a/style.css
+++ b/style.css
@@ -7,6 +7,38 @@ iframe {
     max-width: 100%;
 }
 
+.footer_hr {
+    border: 1px solid #5a7184;
+    background-color: #5a7184;
+    color: #5a7184;
+    width: 100vw;
+    margin: auto;
+}
+
+.table {
+    overflow-y: auto;
+    font-size: 17px;
+    max-height: 412px;
+    border: solid 1px white;
+    margin: 5px 0px;
+    background: linear-gradient(90deg, red, blue);
+    box-shadow: 1px 1px 30px 5px yellow;
+}
+
+.header {
+    z-index: 5000;
+    box-shadow: 0px 10px 50px 0px blue;
+    width: 100vw;
+    border-style: solid;
+    border-bottom-width: 0.6px;
+    border-bottom-color: white;
+    border: outset;
+    border-bottom-width: 2px;
+    top: 0px;
+    padding: 5px;
+    background: linear-gradient(90deg, red, blue)
+}
+
 .puppy-image {
     width: 100%;
 }
@@ -20,8 +52,12 @@ iframe {
     width: 5px;
 }
 
+
+
 ::-webkit-scrollbar-thumb {
-    background-color: #fffffe;
+    background-color: #ceeece;
+    border-radius: 15px;
+
 }
 
 .like-button {
