--- a/style.css
+++ b/style.css
@@ -26,14 +26,12 @@ iframe {
 }
 
 .header {
-    z-index: 5000;
+    z-index: 99999;
     box-shadow: 0px 10px 50px 0px blue;
     width: 100vw;
-    border-style: solid;
-    border-bottom-width: 0.6px;
-    border-bottom-color: white;
-    border: outset;
-    border-bottom-width: 2px;
+    border-bottom: 2px solid white;
+
+    height: 12vh;
     top: 0px;
     padding: 5px;
     background: linear-gradient(90deg, red, blue)
