--- a/style.css
+++ b/style.css
@@ -7,7 +7,19 @@
 .div-roter {
     box-shadow: 0px 0px 50px 5px red inset;
 }
+@media (orientation:portrait) {
+    .d-test {
+        display: none;
+    }
+}
 
+@media (orientation:landscape) {
+    .d-test {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
 #roter {
     height: 50px;
     padding: 0px 5px;
