--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 .div-roter {
     box-shadow: 0px 0px 50px 5px red inset;
-    transition: ease-in-out;
+    transition: ease-in-out 1s;
 }
 @media (orientation:portrait) {
     .d-test {
@@ -333,4 +333,5 @@ footer {
     border-color: white;
 
 }
+
 
